log
Thu 16 May 2024 11:37:00 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  3|4
total_score: 20/70
65b91f5
Thu 16 May 2024 11:44:10 PM UTC: 
 sudoku.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
 tests:  5|3
total_score: 35/70
03e7639
Thu 16 May 2024 11:45:39 PM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  6|2
total_score: 45/70
7323c90
Sun 19 May 2024 01:01:14 AM UTC: 
 sudoku.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:120:11: error: expected expression before ‘Stack’
  120 |       pop(Stack);
      |           ^~~~~
sudoku.c:133:7: error: unknown type name ‘list’; did you mean ‘List’?
  133 |       list *adj = get_adj_nodes(n);
      |       ^~~~
      |       List
sudoku.c:133:19: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ [-Werror=incompatible-pointer-types]
  133 |       list *adj = get_adj_nodes(n);
      |                   ^~~~~~~~~~~~~
sudoku.c:134:25: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  134 |       Node *aux = first(adj);
      |                         ^~~
      |                         |
      |                         int *
In file included from test.c:4:
list.h:16:19: note: expected ‘List *’ but argument is of type ‘int *’
   16 | void* first(List* list);
      |             ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:137:21: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  137 |          aux = next(adj);
      |                     ^~~
      |                     |
      |                     int *
In file included from test.c:4:
list.h:17:18: note: expected ‘List *’ but argument is of type ‘int *’
   17 | void* next(List* list);
      |            ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
c4fa277
Sun 19 May 2024 01:02:05 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:7: error: unknown type name ‘list’; did you mean ‘List’?
  133 |       list *adj = get_adj_nodes(n);
      |       ^~~~
      |       List
sudoku.c:133:19: error: initialization of ‘int *’ from incompatible pointer type ‘List *’ [-Werror=incompatible-pointer-types]
  133 |       list *adj = get_adj_nodes(n);
      |                   ^~~~~~~~~~~~~
sudoku.c:134:25: error: passing argument 1 of ‘first’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  134 |       Node *aux = first(adj);
      |                         ^~~
      |                         |
      |                         int *
In file included from test.c:4:
list.h:16:19: note: expected ‘List *’ but argument is of type ‘int *’
   16 | void* first(List* list);
      |             ~~~~~~^~~~
In file included from test.c:5:
sudoku.c:137:21: error: passing argument 1 of ‘next’ from incompatible pointer type [-Werror=incompatible-pointer-types]
  137 |          aux = next(adj);
      |                     ^~~
      |                     |
      |                     int *
In file included from test.c:4:
list.h:17:18: note: expected ‘List *’ but argument is of type ‘int *’
   17 | void* next(List* list);
      |            ~~~~~~^~~~
cc1: all warnings being treated as errors
Compilation failed
7f2c3de
Sun 19 May 2024 01:02:25 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
9af968a
